2023-10-19  Fojtik Jaroslav  <JaFojtik@yandex.com>
	coders/wpg.c Fix for potentiall access to uninitialised
	object "Palette".

2023-10-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c: Do not store palette into image structure before
	a raster chunk is found. Implemented for WPG l1 only.

2023-10-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): If a colormap is provided, make
	sure that PsuedoClass indexes are initialized before promoting
	image to PseudoClass. Addresses oss-fuzz issue 63335:
	"graphicsmagick:coder_WPG_fuzzer: Use-of-uninitialized-value in
	GrayscalePseudoClassImage".  This is a stop-gap fix until the
	WPG reader supports a colormap independent of the image, to be
	used when needed.

2023-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Remove safe-guards against use
	of incorrect PHOTOMETRIC_MINISWHITE or PHOTOMETRIC_MINISBLACK
	photometic for Group3 and Group4 compression.  Other photometrics
	are rejected when using Group3 or Group4 compression.  The user is
	responsible for providing the correct parameters.  This is to
	address discussion on the graphicsmagick-help list on October 16,
	2023 under the topic "tiff:photometric and CCITT compression".

2023-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): If a colormap is provided, make
	sure that PsuedoClass indexes are initialized before promoting
	image to PseudoClass. Addresses oss-fuzz issue 61394:
	"graphicsmagick:coder_WPG_fuzzer: Use-of-uninitialized-value in
	GrayscalePseudoClassImage".
	(ReadWPGImage): If pixel cache was not initialized at all, then
	set DirectClass pixels as well.

2023-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/heif.c (ReadHEIFImage): Call heif_init() and
	heif_deinit() if they are available.

2023-10-02  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Emit error when ExportImagePixelArea fails.